find powerline in system path

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,7 +13,7 @@ set-window-option -g xterm-keys on
 unbind-key -n C-Left
 unbind-key -n C-Right
 
-source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+source /usr/share/powerline/bindings/tmux/powerline.conf
 # apparently the xterm- prefix is required to make vim happy about ctrl-arrow
 set -g default-terminal "xterm-screen-256color"
 
