tmux: drop powerline

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@ set -g prefix `
 set -g prefix2 C-b
 
 set -g base-index 1
-set -sg escape-time 100
+#set -sg escape-time 100
 bind r source-file ~/.tmux.conf
 
 bind-key ` send-prefix
@@ -13,9 +13,62 @@ set-window-option -g xterm-keys on
 unbind-key -n C-Left
 unbind-key -n C-Right
 
-source /usr/share/powerline/bindings/tmux/powerline.conf
 # apparently the xterm- prefix is required to make vim happy about ctrl-arrow
 set -g default-terminal "xterm-screen-256color"
+
+so_base03="colour00"
+so_base02="colour18"
+so_base01="colour19"
+so_base00="colour08"
+so_base0="colour20"
+so_base1="colour07"
+so_base2="colour21"
+so_base3="colour15"
+so_yellow="colour03"
+so_orange="colour16"
+so_red="colour01"
+so_magenta="colour17"
+so_violet="colour05"
+so_blue="colour04"
+so_cyan="colour06"
+so_green="colour02"
+
+_background="$so_base02"
+_session="$so_base03"
+_session_prefix="$so_cyan"
+_current="$so_blue"
+
+window_color="fg=$so_base0 bg=$_background"
+window_divider_color="fg=$so_base01 bg=$_background"
+
+window_name_color="fg=$so_base2 bg=$_current"
+window_current_color="default"
+window_current_hard_divider_color="fg=$_background bg=$_current"
+window_current_hard_divider_next_color="fg=$_current bg=$_background"
+
+session_color="fg=$so_base1 bg=$_session"
+session_prefix_color="fg=$so_base2 bg=$_session_prefix"
+session_prefix_divider_color="fg=$_session_prefix bg=$_background"
+session_divider_color="fg=$_session bg=$_background"
+
+host_color="fg=$so_orange bg=$so_base2"
+host_divider_color="bg=$so_base03 fg=$so_base2"
+load_color="fg=$so_green bg=$so_base03"
+load_divider_color="fg=$so_base03 bg=$so_base02"
+
+set -g status-style "bg=$_background"
+set -g status-left "#{?client_prefix,#[$session_prefix_color],#[$session_color]} #S #{?client_prefix,#[$session_prefix_divider_color],#[$session_divider_color]} "
+set -g status-right-style "fg=$so_base01 bg=$so_base03"
+set -g status-right "#[$load_divider_color]#[$load_color] #(awk '{\$NF=\"\"; print \$0}' /proc/loadavg)#[default] %b %d  %H:%M #[$host_divider_color]#[$host_color]  #h "
+set -g status-right-length 70
+set -g status-interval 5
+
+set -g window-status-separator ''
+set -g window-status-style "$window_color"
+set -g window-status-format "  #I#{?window_flags,#F, } #[$window_divider_color] #[default]#W   "
+
+set -g window-status-current-style "$window_name_color"
+set -g window-status-current-format "#[$window_current_hard_divider_color] #[$window_current_color]#I#F  #[default]#W #[$window_current_hard_divider_next_color] "
 
 bind-key -n C-S-F2 new-session
 
