--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,27 @@
 [submodule ".zsh/zsh-autosuggestions"]
 	path = .zsh/zsh-autosuggestions
 	url = https://github.com/zsh-users/zsh-autosuggestions
+[submodule ".config/nvim/bundle/async.vim"]
+	path = .config/nvim/bundle/async.vim
+	url = https://github.com/prabirshrestha/async.vim
+[submodule ".config/nvim/bundle/deoplete.nvim"]
+	path = .config/nvim/bundle/deoplete.nvim
+	url = https://github.com/Shougo/deoplete.nvim
+[submodule ".config/nvim/bundle/echodoc.vim"]
+	path = .config/nvim/bundle/echodoc.vim
+	url = https://github.com/Shougo/echodoc.vim
+[submodule ".config/nvim/bundle/LanguageClient-neovim"]
+	path = .config/nvim/bundle/LanguageClient-neovim
+	url = https://github.com/autozimu/LanguageClient-neovim.git
+[submodule ".config/nvim/bundle/nerdtree"]
+	path = .config/nvim/bundle/nerdtree
+	url = https://github.com/scrooloose/nerdtree
+[submodule ".config/nvim/bundle/tagbar"]
+	path = .config/nvim/bundle/tagbar
+	url = https://github.com/majutsushi/tagbar
+[submodule ".config/nvim/bundle/vim-airline"]
+	path = .config/nvim/bundle/vim-airline
+	url = https://github.com/vim-airline/vim-airline
+[submodule ".config/nvim/bundle/vim-surround"]
+	path = .config/nvim/bundle/vim-surround
+	url = https://github.com/tpope/vim-surround
