tmux: update to 3.0

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,8 +41,7 @@ _current="$so_blue"
 window_color="fg=$so_base0 bg=$_background"
 window_divider_color="fg=$so_base01 bg=$_background"
 
-window_name_color="fg=$so_base2 bg=$_current"
-window_current_color="default"
+window_current_color="fg=$so_base2 bg=$_current"
 window_current_hard_divider_color="fg=$_background bg=$_current"
 window_current_hard_divider_next_color="fg=$_current bg=$_background"
 
@@ -56,19 +55,19 @@ host_divider_color="bg=$so_base03 fg=$so_base2"
 load_color="fg=$so_green bg=$so_base03"
 load_divider_color="fg=$so_base03 bg=$so_base02"
 
+datetime_color="fg=$so_base01 bg=$so_base03"
+
+set -g set-titles on
 set -g status-style "bg=$_background"
 set -g status-left "#{?client_prefix,#[$session_prefix_color],#[$session_color]} #S #{?client_prefix,#[$session_prefix_divider_color],#[$session_divider_color]} "
-set -g status-right-style "fg=$so_base01 bg=$so_base03"
-set -g status-right "#[$load_divider_color]#[$load_color] #(awk '{\$NF=\"\"; print \$0}' /proc/loadavg)#[default] %b %d  %H:%M #[$host_divider_color]#[$host_color]  #h "
+set -g status-right "#[$load_divider_color]#[$load_color] #(awk '{\$NF=\"\"; print \$0}' /proc/loadavg)"
+#set -g status-right "#[$load_divider_color]#[$load_color] #(awk '{\$NF=\"\"; print \$0}' /proc/loadavg)#[$datetime_color] %b %d  %H:%M #[$host_divider_color]#[$host_color]  #h "
 set -g status-right-length 70
 set -g status-interval 5
 
 set -g window-status-separator ''
-set -g window-status-style "$window_color"
-set -g window-status-format "  #I#{?window_flags,#F, } #[$window_divider_color] #[default]#W   "
-
-set -g window-status-current-style "$window_name_color"
-set -g window-status-current-format "#[$window_current_hard_divider_color] #[$window_current_color]#I#F  #[default]#W #[$window_current_hard_divider_next_color] "
+set -g window-status-format "  #I#{?window_flags,#F, } #[$window_divider_color] #[$window_color]#W   "
+set -g window-status-current-format "#[$window_current_hard_divider_color] #[$window_current_color]#I#F  #W #[$window_current_hard_divider_next_color] "
 
 bind-key -n C-S-F2 new-session
 
@@ -88,3 +87,5 @@ bind-key -n M-IC paste-buffer
 
 bind-key Tab select-pane -l
 bind-key Space next-window
+
+set-option -sg escape-time 50
