alacritty config update

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -7,9 +7,16 @@ font:
 
 selection:
   save_to_clipboard: true
-  semantic_escape_chars: ",│`|:\"' ()[]{}<>\t\u00a0"
+  semantic_escape_chars: ",│`|\"' ()[]{}<>\t\u00a0"
 
 mouse_bindings:
   - { mouse: Middle, action: Paste }
 key_bindings:
   - { key: Insert, mods: Shift, action: Paste }
+
+mouse:
+  hide_when_typing: true
+
+  url:
+    modifiers: Control
+
