--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,22 +16,21 @@ unbind-key -n C-Right
 # apparently the xterm- prefix is required to make vim happy about ctrl-arrow
 set -g default-terminal "xterm-screen-256color"
 
-so_base03="colour00"
-so_base02="colour18"
-so_base01="colour19"
-so_base00="colour08"
-so_base0="colour20"
-so_base1="colour07"
-so_base2="colour21"
+so_base03="colour0"
+so_base02="colour236"
+so_base01="colour240"
+so_base0="colour244"
+so_base1="colour248"
+so_base2="colour252"
 so_base3="colour15"
-so_yellow="colour03"
-so_orange="colour16"
-so_red="colour01"
-so_magenta="colour17"
-so_violet="colour05"
-so_blue="colour04"
-so_cyan="colour06"
-so_green="colour02"
+so_yellow="colour3"
+so_orange="colour9"
+so_red="colour1"
+so_magenta="colour5"
+so_violet="colour13"
+so_blue="colour4"
+so_cyan="colour6"
+so_green="colour2"
 
 _background="$so_base02"
 _session="$so_base03"
@@ -89,3 +88,6 @@ bind-key Tab select-pane -l
 bind-key Space next-window
 
 set-option -sg escape-time 50
+
+# vim background is black without this in 16-color mode with termguicolors
+set -ga terminal-overrides ",alacritty:Tc"
