--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -17,8 +17,19 @@ key_bindings:
 mouse:
   hide_when_typing: true
 
-  url:
-    modifiers: Control
+hints:
+  enabled:
+   - regex: "(mailto:|gemini:|gopher:|https:|http:|news:|file:|git:|ssh:|ftp:)\
+             [^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩`]+"
+     command: xdg-open
+     post_processing: true
+     mouse:
+       enabled: true
+       mods: Control
+     binding:
+       key: U
+       mods: Control|Shift
+
 
 draw_bold_text_with_bright_colors: false
 # Colors (Gruvbox dark)
