switch to slock for screen locking

--- a/.config/autostart/XSS-Lock.desktop
+++ b/.config/autostart/XSS-Lock.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Exec=xss-lock -v -- xdg-screensaver lock
+Exec=xss-lock -v -- slock
 Name=XSS-Lock
 OnlyShowIn=LXQt;
 Type=Application
