disable alacritty windows fullscreen binding
in favor of ipython submit buffer

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -13,6 +13,7 @@ mouse_bindings:
   - { mouse: Middle, action: Paste }
 key_bindings:
   - { key: Insert, mods: Shift, action: Paste }
+  - { key: Return, mods: Alt, action: ReceiveChar }
 
 mouse:
   hide_when_typing: true
