tmux to propagate osc52

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -91,3 +91,6 @@ set-option -sg escape-time 50
 
 # vim background is black without this in 16-color mode with termguicolors
 set -ga terminal-overrides ",alacritty:Tc"
+
+# allow OSC52 from clients
+set -s set-clipboard on
