--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,5 @@
 unbind C-b
-set -g prefix `
-set -g prefix2 C-b
+set -g prefix C-b
 
 set -g base-index 1
 #set -sg escape-time 100
@@ -59,7 +58,8 @@ datetime_color="fg=$so_base01 bg=$so_base03"
 set -g set-titles on
 set -g status-style "bg=$_background"
 set -g status-left "#{?client_prefix,#[$session_prefix_color],#[$session_color]} #S #{?client_prefix,#[$session_prefix_divider_color],#[$session_divider_color]} "
-set -g status-right "#[$load_divider_color]#[$load_color] #(awk '{\$NF=\"\"; print \$0}' /proc/loadavg)"
+set -g status-left-length 6
+set -g status-right "#[$load_divider_color]#[$load_color] #(awk '{\$NF=\"\"; print \$0}' /proc/loadavg) #[$host_divider_color]#[$host_color]  #h "
 #set -g status-right "#[$load_divider_color]#[$load_color] #(awk '{\$NF=\"\"; print \$0}' /proc/loadavg)#[$datetime_color] %b %d  %H:%M #[$host_divider_color]#[$host_color]  #h "
 set -g status-right-length 70
 set -g status-interval 5
