--- a/.ssh/config
+++ b/.ssh/config
@@ -9,4 +9,7 @@ MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,umac-128-etm@op
 
 HostKeyAlgorithms ssh-ed25519-cert-v01@openssh.com,ssh-rsa-cert-v01@openssh.com,ssh-ed25519,ssh-rsa
 
+ControlPath ~/.ssh/controlmasters/%r@%h:%p
+ControlMaster auto
+
 Include config.local
